# tome-server

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: config.rs  db.rs  lib.rs  main.rs
src/entities/: article.rs  mod.rs  prelude.rs
src/handlers/: article.rs  mod.rs  root.rs
src/models/: article.rs  health_check.rs  mod.rs
src/routes/: article.rs  mod.rs  root.rs
src/security/: api_key.rs
src/services/: mod.rs
