[package]
name = "tome-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.28"
sea-orm = { version = "2.0.0-rc.6", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-migration = "2.0.0-rc.6"
config = "0.15.15"
toml = "0.9.5"
json-patch = "4.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
flexi_logger = "0.31.2"
